--- a/VagrantFile
+++ b/VagrantFile
@@ -12,14 +12,16 @@ Vagrant.configure("2") do |config|
      debian.vm.provision "shell",path: "flask.sh"
      debian.vm.provision "shell",privileged: false,inline: <<-SHELL
 
-     pip3 install pipenv
+     pip3 install pipenv python-dotenv
      export PATH="$PATH:/home/vagrant/.local/bin"
      pipenv --version
 
-     pip3 install python-dotenv
+     cd /var/www/app
 
      echo "FLASK_APP=wsgi.py" > .env
-    echo "FLASK_ENV=production" >> .env
+     echo "FLASK_ENV=production" >> .env
+
+     pipenv install flask gunicorn
 
      SHELL
   end
