--- a/VagrantFile
+++ b/VagrantFile
@@ -26,7 +26,7 @@ Vagrant.configure("2") do |config|
      cp /vagrant/application.py ./
      cp /vagrant/wsgi.py ./
 
-     pipenv run flask run --host '0.0.0.0'"
+     pipenv run flask run --host '0.0.0.0' &
      SHELL
   end
 end
