--- a/VagrantFile
+++ b/VagrantFile
@@ -11,9 +11,10 @@ Vagrant.configure("2") do |config|
      debian.vm.network "private_network",ip: "192.168.56.20"
      debian.vm.provision "shell",path: "flask.sh"
      debian.vm.provision "shell",privileged: false,inline: <<-SHELL
-
-     pip3 install pipenv python-dotenv
      export PATH="$PATH:/home/vagrant/.local/bin"
+     export PIPENV_VENV_IN_PROJECT=1
+     pip3 install pipenv python-dotenv
+     
      pipenv --version
 
      cd /var/www/app
@@ -26,7 +27,10 @@ Vagrant.configure("2") do |config|
      cp /vagrant/application.py ./
      cp /vagrant/wsgi.py ./
 
-     pipenv run flask run --host '0.0.0.0' &
+     # COMANDO PARQA QUE CORRA DIRECTAMENTE pipenv run flask run --host '0.0.0.0' &
+     pipenv run gunicorn --workers 4 --bind 0.0.0.0:5000 wsgi:app --daemon
+
+     
      SHELL
   end
 end
