--- a/flask_app.service
+++ b/flask_app.service
@@ -10,8 +10,7 @@ Environment="PATH=/var/www/app/.venv/bin"
 WorkingDirectory=/var/www/app
 
 # 2. Usamos la ruta fija de Gunicorn y bind a la IP para poder ver la web
-ExecStart=/var/www/app/.venv/bin/gunicorn --workers 3 --bind 0.0.0.0:5000 wsgi:app
-
+ExecStart=/var/www/app/.venv/bin/gunicorn --workers 3 --bind unix:/var/www/app/app.sock wsgi:app
 Restart=always
 
 [Install]
