Continuamos con la tarea adicional

--- a/app.conf
+++ b/app.conf
@@ -9,4 +9,9 @@ server {
         include proxy_params;
         proxy_pass http://unix:/var/www/app/app.sock;
     }
+
+    location /azure {
+        include proxy_params;
+        proxy_pass http://unix:/var/www/app_azure/azure.sock;
+    }
 }
