--- a/VagrantFile
+++ b/VagrantFile
@@ -38,6 +38,7 @@ Vagrant.configure("2") do |config|
      # COMANDO PARA QUE SE EJECUTE CON GUNICORN pipenv run gunicorn --workers 4 --bind 0.0.0.0:5000 wsgi:app --daemon
     sudo systemctl daemon-reload
     sudo systemctl restart flask_app
+    sudo systemctl restart flask_azure
     sudo systemctl restart nginx
 
      SHELL
