Renombramos Archivos y finalizamos proyecto

--- a/app.conf
+++ b/app.conf
@@ -10,8 +10,8 @@ server {
         proxy_pass http://unix:/var/www/app/app.sock;
     }
 
-    location /azure {
+    location /azure/ {
         include proxy_params;
-        proxy_pass http://unix:/var/www/app_azure/azure.sock;
+        proxy_pass http://unix:/var/www/app_azure/azure.sock:/;
     }
 }
