--- a/VagrantFile
+++ b/VagrantFile
@@ -27,10 +27,9 @@ Vagrant.configure("2") do |config|
      cp /vagrant/application.py ./
      cp /vagrant/wsgi.py ./
 
-     cd /var/www
-     git clone https://github.com/Azure-Samples/msdocs-python-flask-webapp-quickstart app_azure
-     cd app_azure
-
+     cd /var/www/app_azure
+     git clone https://github.com/Azure-Samples/msdocs-python-flask-webapp-quickstart .
+     export PATH="$PATH:/home/vagrant/.local/bin"
      export PIPENV_VENV_IN_PROJECT=1
      pipenv install -r requirements.txt
 
